tilt/ingressroute-rmui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rmui
  namespace: opendefence-system
  labels:
    app: rmui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`localmaeher.dev.pvarki.fi`)
      priority: 100
      services:
        - name: rmui
          port: 8080
    - kind: Rule
      match: Host(`mtls.localmaeher.dev.pvarki.fi`)
      priority: 100
      services:
        - name: rmui
          port: 8080
  tls: {}
